# AAI-Avatar-Agent

./: .gitignore  README.md
backend/: .env.example  README.md  agent.py  check_models.py  generate_evaluation_charts.py  pyproject.toml  seed_pinecone.py
backend/data/: finance.json  healthcare.json  software_engineering.json
backend/interview/: evaluator.py  question_generator.py  session_manager.py
backend/nlp/: preprocessor.py
backend/notebooks/: 01_nlp_preprocessing_pipeline.ipynb  02_rag_knowledge_retrieval.ipynb  03_prompt_engineering.ipynb  04_evaluation_metrics.ipynb
backend/prompts/: templates.py
backend/rag/: knowledge_base.py  retriever.py
backend/results/: evaluation_metrics.json
frontend/: app-config.ts
frontend/app/(app)/: layout.tsx
frontend/app/api/connection-details/: route.ts
frontend/components/: app.tsx  report-card.tsx  session-view.tsx  welcome.tsx
frontend/hooks/: useConnectionDetails.ts
frontend/lib/: types.ts
