[project]
name = "interview-avatar-backend"
version = "1.0.0"
description = "AI Interview Avatar Agent — LiveKit backend with NLP, RAG, and CoT evaluation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # LiveKit agent framework + plugins (keep all plugins on the same minor version)
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.6",
    "livekit-plugins-anam~=1.6",
    "livekit-plugins-noise-cancellation~=0.2",

    # NLP
    "nltk>=3.9",
    "numpy>=1.26",

    # LLM + Embeddings (OpenAI)
    "openai>=1.0",

    # Vector store (RAG)
    "pinecone>=7.3",

    # Utilities
    "python-dotenv>=1.1",
    "pillow>=11.3",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "rouge-score>=0.1",
    "scikit-learn>=1.5",
]

dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlp", "rag", "interview", "prompts"]

[tool.ruff]
line-length = 100
target-version = "py312"
